2009-12-18  Stefano Zacchiroli  <zack@pps.jussieu.fr>

	* c-lib Remove the need of OCaml devel stuff to use the C API
	* c-lib Provide bindings to OCaml native code, if available
	* c-lib Hide OCaml "value", it is way more safe (API change)
	* c-lib O(n^2) -> O(n) speed-up in package list conversion
	* ALL Development release 0.5.94

2009-11-25  Stefano Zacchiroli  <zack@pps.jussieu.fr>

	* ALL Porting to CUDF 2.0
	* ALL Development release 0.5.92

2009-02-24  Stefano Zacchiroli  <zack@pps.jussieu.fr>

	* ALL First public release, version 0.4
