@@ -1,3 +1,9 @@
+2010-01-27  Stefano Zacchiroli  <zack@pps.jussieu.fr>
+
+	* c-lib add structured accessors to request fields
+	  (patch by Gustavo Gutierrez, thanks!)
+	* ALL UNRELEASED
+
 2009-12-18  Stefano Zacchiroli  <zack@pps.jussieu.fr>
 
 	* c-lib Remove the need of OCaml devel stuff to use the C API
